--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "mongodb": "^3.1.8",
